# akhada-engine

./: .env.example  .gitignore  LICENSE  Makefile  NOTICE  README.md
.github/workflows/: ci.yml
benchmarks/akhada-bench/: README.md  harness.py
docs/: BUSINESS-PROPOSAL.md  PROJECT-PROPOSAL.md  README.md  RELATED-WORK.md
docs/compliance/: README.md
docs/persona-library/: README.md
infra/: README.md  main.tf
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/data/personas/: personas-2026.Q2.1.jsonl
services/orchestrator/src/akhada/: __init__.py  cli.py  config.py
services/orchestrator/src/akhada/agents/: __init__.py  cluster.py  final.py  persona_leaf.py  super_cluster.py
services/orchestrator/src/akhada/api/: __init__.py  main.py  routes.py  schemas.py
services/orchestrator/src/akhada/conformity/: __init__.py  dissent_appendix.py
services/orchestrator/src/akhada/eval/: __init__.py  bias_audit.py  biographical_authenticity.py  conformity.py  diversity.py
services/orchestrator/src/akhada/flows/: __init__.py  debate.py
services/orchestrator/src/akhada/persistence/: __init__.py  audit.py  sqlite.py  store.py
services/orchestrator/src/akhada/persona_registry/: __init__.py  fixtures.py  loader.py  prompt_renderer.py  sampler.py  schema.py
services/orchestrator/src/akhada/persona_registry/biography/: __init__.py  generator.py  seeds.py
services/orchestrator/src/akhada/persona_registry/seed/: __init__.py
services/orchestrator/src/akhada/persona_registry/validation/: __init__.py  book_authenticity.py
services/orchestrator/src/akhada/runtime/: __init__.py  online.py  prompts.py
services/orchestrator/src/akhada/synthesis/: __init__.py  citation_verify.py  compose.py  conclude.py  extract.py
services/orchestrator/src/akhada/telemetry/: __init__.py  otel.py
services/orchestrator/tests/: conftest.py  test_fixtures.py  test_persistence.py  test_sampler.py  test_schema.py  test_smoke.py
services/studio-web/: README.md  package-lock.json  package.json  tailwind.config.ts
services/studio-web/app/: globals.css  layout.tsx  page.tsx
services/studio-web/app/audit/[id]/: page.tsx
services/studio-web/app/debate/[id]/: page.tsx
services/studio-web/components/: ArchetypeCard.tsx  ArticleProse.tsx  ConclusiveRemark.tsx  ConfigurePanel.tsx  EmptyState.tsx  Footer.tsx  HeroHeader.tsx  NavBar.tsx  PanelComposition.tsx  ProgressIndicator.tsx  ResultHeader.tsx  ThemeProvider.tsx  ThemeToggle.tsx
services/studio-web/lib/: format.ts
