[tool.poetry]
name = "akhada-orchestrator"
version = "0.0.1"
description = "Akhada — open debate engine orchestrator (ADK + FastAPI)"
authors = ["Akhada contributors"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "akhada", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "^1.17"
google-genai = "^1.0"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.6"
python-dotenv = "^1.0"
structlog = "^24.4"
httpx = "^0.27"
sse-starlette = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.7"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
akhada = "akhada.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
