[tool.poetry]
name = "akhada-orchestrator"
version = "0.10.0"
description = "Akhada — Open Debate Engine orchestrator (ADK + FastAPI). A SARGVISION Intelligence product."
authors = ["SARGVISION Intelligence"]
maintainers = ["SARGVISION Intelligence"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sargupta/akhada-engine"
repository = "https://github.com/sargupta/akhada-engine"
packages = [{ include = "akhada", from = "src" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Sociology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "^1.17"
google-genai = ">=1.66"
fastapi = ">=0.115"
uvicorn = { extras = ["standard"], version = ">=0.32" }
pydantic = "^2.9"
pydantic-settings = "^2.6"
python-dotenv = "^1.0"
structlog = ">=24.4"
httpx = ">=0.28"
sse-starlette = ">=2.1"
numpy = ">=2.0"
scipy = ">=1.13"
scikit-learn = ">=1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.7"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
akhada = "akhada.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
